syntax = "proto3";

service User {
    rpc GetUser(GetUserRequest) returns (GetUserResponse) {}; 
}

message GetUserRequest {
    int64 user_id = 1;
}

message GetUserResponse {
    int64 id = 1;
    string username = 2;
    optional string avatar_url = 3;
    int64 created_at = 4;
}